# voxel-nexus

./: .gitattributes  AGENTS.md  CONTEXT.md  Cargo.toml  skills-lock.json
.agents/skills/code-review/: SKILL.md
.agents/skills/devlog-workflow/: SKILL.md
.agents/skills/to-spec/: SKILL.md
apps/desktop-demo/: Cargo.toml
apps/desktop-demo/src/: main.rs  windows_adapter.rs
apps/desktop-demo/tests/: canonical_configuration.rs  render_path_failures.rs  unsupported_prerequisites.rs
crates/canonical-inspection/: Cargo.toml
crates/canonical-scene/: Cargo.toml
crates/completion-evidence/: Cargo.toml
crates/completion-evidence/src/: completion_evidence.rs  verify_completion_evidence.rs
crates/completion-evidence/tests/: public_contract.rs
crates/localized-raster-evidence/: Cargo.toml
crates/measurement-evidence/: Cargo.toml
crates/measurement-evidence/src/: measurement_evidence.rs  measurement_evidence_report.rs  raster_region_extent_report.rs
crates/measurement-evidence/tests/: public_contract.rs
crates/raster-render-path/: Cargo.toml  build.rs
crates/raster-render-path/shaders/: raster.frag  raster.vert
crates/raster-render-path/src/: raster_render_path.rs
crates/raster-render-path/tests/: artifact_gate.rs  camera.rs  convergence.rs  derivation.rs  failures.rs  front_face.rs  localized_replacement.rs  preparation.rs  regions.rs
crates/render-backend/: Cargo.toml  build.rs
crates/voxel-frontend/: Cargo.toml
docs/agents/: issue-tracker.md  milestones.md
docs/devlogs/: 21-dense-raster-voxel-scene.md  38-localized-editable-raster-convergence.md  8-robust-vulkan-triangle.md
docs/research/: first-sparse-storage-proof.md  portable-phase-1-ray-rendering-baseline.md
docs/verification/: milestone-completion.md  timing-evidence.md  windows-lifecycle.md
scripts/: assemble-localized-raster-evidence.ps1  build-devlog-21-animatic.ps1  build-devlog-38-animatic.ps1  build-devlog-8-animatic.ps1  capture-milestone-completion.ps1  characterize-raster-region-scales.ps1  collect-timing-evidence.ps1  qualify-raster-region-extents.ps1  verify-edit-burst-demo.ps1  verify-localized-raster-source-processes.ps1  verify-windows-lifecycle.ps1
(+157 files in other folders)
