[package]
name = "desktop-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "desktop-demo"
path = "src/main.rs"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
canonical-inspection = { path = "../../crates/canonical-inspection" }
canonical-scene = { path = "../../crates/canonical-scene" }
raw-window-handle = "0.6.2"
render-backend = { path = "../../crates/render-backend" }
raster-render-path = { path = "../../crates/raster-render-path" }
voxel-frontend = { path = "../../crates/voxel-frontend" }
winit = "0.30.12"
