[package]
name = "completion-evidence"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/completion_evidence.rs"

[[bin]]
name = "verify-completion-evidence"
path = "src/verify_completion_evidence.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0.18"

