[package]
name = "measurement-evidence"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/measurement_evidence.rs"

[[bin]]
name = "measurement-evidence-report"
path = "src/measurement_evidence_report.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
